<resources>
    <string name="app_name">GuessTheNumberFragments2</string>
    <string name="msg_show_txt">Отгадай!</string>
    <string name="hint_show_txt">Задумано двузначное число.</string>
    <string name="attempts_lest_txt">5</string>
    <string name="wishYou">Поздравляю!</string>
    <string name="guessBtn">Отгадать</string>
    <string name="againBtn">Заново</string>
    <string name="hint">Введите число</string>
    <string name="lower">Моё число меньше твоего</string>
    <string name="bigger">Мое число больше твоего</string>
    <string name="right">Отгадано!</string>
    <string name="incorrect">Введены некорректные данные.</string>
    <string name="no_attempts">Вы использовали все попытки(</string>
    <string name="empty_num">Введите число</string>
    <string name="Mode_btn_txt">Изменить режим</string>
    <string name="dialog_mode_title">Выберите режим</string>
    <string name="dialog_positive_btn_mode">Изменить</string>
    <string name="dialog_mode_item1">2-х значное число</string>
    <string name="dialog_mode_item2">3-х значное число</string>
    <string name="dialog_mode_item3">4-х значное число</string>
    <string name="dialog_negative_btn_txt">Назад</string>
    <string name="hint_for_3">Задумано трёхзначное чсило</string>
    <string name="hint_for_4">Задумано четырёхзначное число</string>
    <string name="btn_delete_last_number">Стереть</string>
    <string name="number_already_guessed">Вы уже отгадали число. Начните игру заново</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_about_developers">Об авторах</string>
    <string name="name_vika">Григуть Виктория Валерьевна</string>
    <string name="name_sasha">"Гончарик Александра Константиновна "</string>
    <string name="info_vika">Дата рождения: 03.03.2004\nУвлекаюсь волейболом и рукоделием</string>
    <string name="info_sasha">Дата рождения: 22.02.2004\nУвлекаюсь конным спортом и книгами</string>
    <string name="context_item_color">Изменить фон текста</string>
    <string name="context_item_delete">Стереть всё</string>
    <string name="notification_title">Напоминание</string>
    <string name="notification_text">Поиграй со мной</string>
    <string name="channel_name">Мой канал уведомлений</string>
    <string name="notification_btn_txt">Уведомление</string>
    <string name="btn_share_txt">Поделиться</string>
    <string name="message_share_guessed">Я отгадал ,-хзначное число за , количество попыток!</string>
    <string name="message_share_not_guessed">Я не смогу отгадать ,-хзначное число за , количество попыток. А ты сможешь?</string>
    <string name="btn_save_notes_txt">Сохранить</string>
    <string name="user_name_txt">Имя пользователя</string>
    <string name="hint_for_name_input">Введите имя пользователя</string>
    <string name="menu_item_change_name">Изменить имя</string>
    <string name="start_user_name">Суперигрок</string>
</resources>