<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="39dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:menu="@menu/main_menu"/>
    </com.google.android.material.appbar.AppBarLayout>-->

    <TextView
        android:id="@+id/msg_show_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:fontFamily="sans-serif"
        android:text="@string/msg_show_txt"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/start_user_name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hint_show_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/hint_show_txt"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/num_user_text"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:hint="@string/hint"
        android:inputType="number|numberDecimal" />


    <Button
        android:id="@+id/guess_btn"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/guessBtn" />

    <TextView
        android:id="@+id/attempts_left_txt"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.5"
        android:text="@string/attempts_lest_txt"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/restart_btn"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:onClick="restart"
        android:text="@string/againBtn" />

    <Button
        android:id="@+id/notification_btn"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/notification_btn_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/btn_share_txt"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_save_notes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/btn_save_notes_txt"
            android:visibility="invisible" />
    </LinearLayout>

    <!--<Button
        android:id="@+id/mode_btn"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Mode_btn_txt" />-->

</LinearLayout>