<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="1"
        android:title="@string/menu_item_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_change_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_item_change_name" />
    <item
        android:id="@+id/menu_item_about_developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="2"
        android:title="@string/menu_item_about_developers"
        app:showAsAction="never" />
</menu>