<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/user_name_txt"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/hint_for_name_input"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_user_name_cancel"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:text="@string/dialog_negative_btn_txt" />

        <Button
            android:id="@+id/btn_user_name_change"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:text="@string/dialog_positive_btn_mode" />
    </LinearLayout>
</LinearLayout>